everything up to comment form

--- a/app/views/pic_templates/details.html.erb
+++ b/app/views/pic_templates/details.html.erb
@@ -1,4 +1,10 @@
 <h1>Photo Details</h1>
+<div>
+  <a href="/delete_photo/<%=@pic.id%>">Delete this photo</a>
+  </div>
+<div>
+<a href="/existing_photo_form/<%=@pic.id%>">Edit this photo</a>  
+</div>
 
 <dl>
   <dt>Image</dt>
