--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,16 @@
           Recent
         </a>
       </div>
+      
+       <div>
+        <a href="/new_photo_form">
+          <i class="fas fa-plus fa-fw"></i>
 
+          Add a photo
+        </a>
+      </div>
+
+      
       <div>
         <a href="/popular">
           <i class="fas fa-fire fa-fw"></i>
